# GameQueue-Planner

./: .codacy.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  appveyor.yml  config_file.json  pyproject.toml  pytest.ini
.circleci/: config.yml
conda.recipe/: meta.yaml
src/gamequeue_planner/: __init__.py  main.py
src/gamequeue_planner/common/: LoggerSingleton.py
src/gamequeue_planner/models/: APIClient.py  CSVCreator.py  ConstRes.py  DatesEditor.py  ExcelFileCreator.py  ExcelStyles.py  FileExtensions.py  FilenameCreator.py  GameObject.py  GamesListEditor.py  SelectedFileFormat.py  platform_ids.py  platforms.py
src/gamequeue_planner/models/Constants/: ConstRes.py
src/gamequeue_planner/models/Dates/: DatesEditor.py
src/gamequeue_planner/models/Files/: FilenameCreator.py
src/gamequeue_planner/models/Files/CSV/: CSVCreator.py
src/gamequeue_planner/models/Files/Excel/: ExcelFileCreator.py
src/gamequeue_planner/models/GameData/: GameObject.py
src/gamequeue_planner/models/Network/: APIClient.py
src/gamequeue_planner/models/Platform/: Platform.py  platform_ids.py
tests/: APIClient_test.py  CSVCreator_test.py  ConstRes_test.py  DatesEditor_test.py  GameObject_test.py  GamesListEditor_test.py  Platform_test.py  platform_ids_test.py
