[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs>=0.3", "setuptools-scm>=7.1"]

[project]
authors = [
  {name = "Adam Chomicki", email = "admchm@outlook.com"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  # package requirements go here
]
description = "An educational project leveraging Python and Data Science for planning game-playing schedules across various platforms."
dynamic = ["version"]
license = {text = "MIT"}
name = "GameQueue Planner"
readme = "README.rst"
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "mypy"
]



[project.urls]
repository = "https://github.com/admchm/GameQueue-Planner"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  # This covers both typing.TYPE_CHECKING and plain TYPE_CHECKING, with any amount of whitespace
  "if\\s+(typing\\.)?TYPE_CHECKING:",
  'if __name__ == "__main__":'
]
omit = [
  "src/gamequeue_planner/__main__.py",
  "src/gamequeue_planner/_version.py",
  "tests/*"
]

[tool.distutils.bdist_wheel]
universal = true

[tool.hatch.build.hooks.vcs]
version-file = "src/gamequeue_planner/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src/gamequeue_planner",
  "/pyproject.toml"
]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
disallow_untyped_defs = true
files = ["src/gamequeue_planner/**/*.py"]
python_version = "3.9"
warn_no_return = true

[tool.pytest.ini_options]
addopts = [
  "-vv",
  "--color=yes",
  "--cov-append",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov=gamequeue_planner",
  "--tb=native",
  "--strict-markers",
  "--durations=20"
]
markers = [
  "serial: execute test serially (to avoid race conditions)",
  "slow: tests can take a long time (deselect with '-m \"not slow\"')"
]
norecursedirs = [".*", "*.egg*", "build", "dist", "conda.recipe", "examples", "env", "envs", "scripts"]
